# PyQGLViewer

./: pyproject-linux.toml  pyproject-win.toml  pyproject.toml
conda/: build.sh  meta.yaml
sip/PyQGLViewer/: PyQGLViewermod.sip  qglviewer-qopenglwidget.sip  quaternion.sip  vec.sip
