 # Specify the build system.
[build-system]
requires = ["sip >=6.8, <7", "PyQt-builder >=1.10, <2"]
build-backend = "sipbuild.api"

# Specify the PEP 566 metadata for the project.
[project]
name = "PyQGLViewer"
version = "1.3.0"
summary = "Python bindings for the libQGViewer widget"
home-page = "https://github.com/fredboudon/PyQGLViewer"
author = "Frederic Boudon"
author-email = "frederic.boudon@cirad.fr"
license = "GPL v3"
#description-file = "README"
requires-dist = "PyQt5 (>=5.12)"

 # Specify a PyQt-based project.
[tool.sip]
project-factory = "pyqtbuild:PyQtProject"

[tool.sip.bindings.PyQGLViewer]
qmake-QT = ["xml", "opengl", "gui", "widgets"]
tags = ["QGLViewer_2_9_1"]

#[tool.sip.bindings.PyQGLViewer.linux]
#libraries = ["QGLViewer", "GLU"]

#[tool.sip.bindings.PyQGLViewer.macos]
#libraries = ["QGLViewer"]
#extra-link-args = ["-framework", "OpenGL"]

#[tool.sip.bindings.PyQGLViewer.windows]
#libraries = ["QGLViewer2", "opengl32", "glu32"]


