 # Specify the build system.
[build-system]
requires = ["sip >=6.8, <7", "PyQt-builder >=1.10, <2"]
build-backend = "sipbuild.api"

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "PyQGLViewer"
version = "1.3.0"
summary = "Python bindings for the libQGViewer widget"
home-page = "https://github.com/fredboudon/PyQGLViewer"
author = "Frederic Boudon"
author-email = "frederic.boudon@cirad.fr"
license = "GPL v3"
#description-file = "README"
dependencies = ["PyQt6 (>=6.2.0)"]

[tool.sip.bindings.PyQGLViewer]
qmake-QT = ['xml opengl gui widgets']
libraries = ['QGLViewer']
tags = ['QGLViewer_2_9_1']
include-dirs=['${CONDA_PREFIX}/include']
library-dirs=['${CONDA_PREFIX}/lib']
#extra-compile-args=['-I${CONDA_PREFIX}/include']
#extra-link-args=['-L${CONDA_PREFIX}/lib']


[tool.sip.project]
sip-module="PyQt6.sip"

